--- a/HomeLedApp/HomeLedApp.csproj
+++ b/HomeLedApp/HomeLedApp.csproj
@@ -22,8 +22,8 @@
     <PackageReference Include="Rg.Plugins.Popup" Version="1.2.0.223" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.530" />
+    <PackageReference Include="Rssdp" Version="4.0.2" />
   </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Update="UI\DetailsPopUp.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
