--- a/HomeLedApp.UWP/HomeLedApp.UWP.csproj
+++ b/HomeLedApp.UWP/HomeLedApp.UWP.csproj
@@ -175,6 +175,9 @@
     <PackageReference Include="Rg.Plugins.Popup">
       <Version>2.0.0.2</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.5.2</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.617" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.10" />
   </ItemGroup>
