--- a/HomeLedApp/HomeLedApp.csproj
+++ b/HomeLedApp/HomeLedApp.csproj
@@ -26,6 +26,12 @@
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.617" />
     <PackageReference Include="Rssdp" Version="4.0.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="UI\RenamePopUp.xaml.cs">
+      <DependentUpon>RenamePopUp.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Update="UI\DetailsPopUp.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
