--- a/HomeLedApp.Android/HomeLedApp.Android.csproj
+++ b/HomeLedApp.Android/HomeLedApp.Android.csproj
@@ -70,6 +70,11 @@
     <AndroidLinkMode>None</AndroidLinkMode>
     <AndroidSupportedAbis>armeabi-v7a;x86;x86_64;arm64-v8a</AndroidSupportedAbis>
     <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <AndroidKeyStore>false</AndroidKeyStore>
+    <AndroidSigningKeyStore />
+    <AndroidSigningStorePass />
+    <AndroidSigningKeyAlias />
+    <AndroidSigningKeyPass />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
