--- a/LEDController/LEDController.vcxproj.filters
+++ b/LEDController/LEDController.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="LEDProvider_NeoPixel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PulseMode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModeBase.cpp">
@@ -81,6 +84,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LEDProvider_NeoPixel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PulseMode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
