--- a/HomeLedApp/HomeLedApp.csproj
+++ b/HomeLedApp/HomeLedApp.csproj
@@ -28,11 +28,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Strings\AppResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>AppResources.resx</DependentUpon>
+    </Compile>
     <Compile Update="UI\RenamePopUp.xaml.cs">
       <DependentUpon>RenamePopUp.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Update="Strings\AppResources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="UI\DetailsPopUp.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
