--- a/HomeLedApp.iOS/HomeLedApp.iOS.csproj
+++ b/HomeLedApp.iOS/HomeLedApp.iOS.csproj
@@ -94,6 +94,8 @@
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
+    <Compile Include="Platform\IOSFormsInteractions.cs" />
+    <Compile Include="Platform\IOSLocalize.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
