--- a/LEDController/LEDController.vcxproj.filters
+++ b/LEDController/LEDController.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="KnightRiderMode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TwoColorMode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModeBase.cpp">
@@ -96,6 +99,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="KnightRiderMode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TwoColorMode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
