--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-#Visual Micrto
-_vm/
 
 # User-specific files
 *.suo
@@ -289,4 +287,6 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
-/LEDController/PrivateWiFiInfo.h
+
+#Visual Micro
+__vm/
