--- a/HomeLedApp.Android/Properties/AndroidManifest.xml
+++ b/HomeLedApp.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="3" android:versionName="3.5.3" package="TobiVanHelsinki.HomeLedController" android:installLocation="preferExternal">
-	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="29" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="HomeLedController" android:icon="@mipmap/icon" android:networkSecurityConfig="@xml/network_security_config" android:usesCleartextTraffic="true"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          android:versionCode="3"
+          android:versionName="3.5.4"
+          package="TobiVanHelsinki.HomeLedController"
+          android:installLocation="preferExternal">
+  <uses-sdk android:minSdkVersion="23"
+            android:targetSdkVersion="29"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <application android:label="HomeLedController"
+               android:icon="@mipmap/icon"
+               android:networkSecurityConfig="@xml/network_security_config"
+               android:usesCleartextTraffic="true"></application>
 </manifest>
