--- a/LEDController/LEDController.vcxproj.filters
+++ b/LEDController/LEDController.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="TwoColorMode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ProjectHeader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModeBase.cpp">
