--- a/LEDController/LEDController.vcxproj.filters
+++ b/LEDController/LEDController.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="ProjectHeader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ConfigIO.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModeBase.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TwoColorMode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ConfigIO.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
