--- a/LEDController/LEDController.vcxproj
+++ b/LEDController/LEDController.vcxproj
@@ -110,6 +110,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
+    <None Include="doc.md" />
     <None Include="LEDController.ino">
       <FileType>CppCode</FileType>
     </None>
