--- a/LEDController/LEDController.vcxproj.filters
+++ b/LEDController/LEDController.vcxproj.filters
@@ -132,5 +132,6 @@
   <ItemGroup>
     <None Include="LEDController.ino" />
     <None Include="cpp.hint" />
+    <None Include="doc.md" />
   </ItemGroup>
 </Project>
