--- a/HomeLedApp.Android/HomeLedApp.Android.csproj
+++ b/HomeLedApp.Android/HomeLedApp.Android.csproj
@@ -27,7 +27,7 @@
     <AndroidSigningKeyAlias>Tobi van Helsinki</AndroidSigningKeyAlias>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
+    <DebugSymbols>false</DebugSymbols>
     <DebugType>portable</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
